Name:                diagrams-constraints
Version:             0.0.1
Synopsis:            constraints backend
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README.md, CHANGES.markdown
Author:              Mathnerd314
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-constraints/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC == 7.8.3
Description:         Constraint solving for diagrams.
                     See README file distributed with the source tarball or
                     viewable on GitHub:
                     <https://github.com/diagrams/diagrams-constraints/blob/master/README.md>.
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-constraints

Library
  Exposed-modules:     Diagrams.Constraints
  Other-modules: CMears Example
  Hs-source-dirs:      src examples
  Build-depends:       base          >= 4.3
                     , vector-space  >= 0.7
                     , colour
                     , diagrams-core >= 1.2
                     , diagrams-lib  >= 1.2
                     , diagrams-svg  >= 1.1
                     , sbv           >= 3.1
                     , lens          >= 4.2
                     , mtl           >= 2.2
                     , data-default
                     , vector-space-points
                     , containers
  Ghc-options:         -Wall
  Default-language:  Haskell2010
